--- a/src/css/login.css
+++ b/src/css/login.css
@@ -11,7 +11,8 @@ body {
 
 .login-box {
     position: absolute;
-    top: 50%;
+    display: none;
+    top: 60%;
     left: 50%;
     width: 400px;
     padding: 40px;
@@ -174,4 +175,12 @@ body {
     100% {
         bottom: 100%;
     }
+}
+
+.vacuum {
+    position: absolute;
+    color: #0D7377;
+    font-size: 2rem;
+    left: 35%;
+    top: 30%;
 }
