--- a/src/css/filter.css
+++ b/src/css/filter.css
@@ -13,14 +13,19 @@
     justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
-      
+      margin-top: 50px;
     
 }
 
+.dropdown-search{
+    width: 40%;
+    height: 100px;
+    padding: 0;
+}
 
 #search-input {
     
-    width: 40%;
+    width: 100%;
     height: 50px;
     background: #323232;
     border: 1px solid #0D7377;
@@ -30,13 +35,17 @@
     color: #B6EADA;
     border-radius: 50px ;
     padding-left: 25px;
-   
+      
    
 }
-
+.dropdown {
+    width: 20%;
+    height: 100px;
+    padding: 0;
+}
 .select-inp{
     
-    width: 20%;
+    width: 100%;
     height: 50px;
     background: #323232;
     border: 1px solid #0D7377;
@@ -59,6 +68,7 @@
     line-height: 20px;
     border-radius: 50px;
     color: #B6EADA;
+    margin-top: -50px;
     
 }
 
@@ -72,48 +82,6 @@
 
 
 
-
-
-/* #search::-webkit-input-placeholder {
-    color: rgba(182, 234, 218, 0.3);
-
-} */
-
-/* .icon {
-    -webkit-border-top-right-radius: 5px;
-    -webkit-border-bottom-right-radius: 5px;
-    -moz-border-radius-topright: 5px;
-    -moz-border-radius-bottomright: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-
-    border: none;
-    background: #0D7377;
-    height: 50px;
-    width: 50px;
-    opacity: 0;
-    font-size: 10pt;
-
-    -webkit-transition: all .55s ease;
-    -moz-transition: all .55s ease;
-    -ms-transition: all .55s ease;
-    -o-transition: all .55s ease;
-    transition: all .55s ease;
-} */
-
-/* .container-4:hover button.icon,
-.container-4:active button.icon,
-.container-4:focus button.icon {
-    outline: none;
-    opacity: 1;
-    margin-left: -50px;
-} */
-
-/* .icon:hover {
-    background: #B6EADA;
-} */
-
-/* ================================== */
 /* dropdown style */ 
 
  .field-search{
@@ -136,13 +104,13 @@
 
  #priority:focus, #priority:active {
 outline: none;
-box-shadow: 0 0 0 2px rgba(0.7, 234, 218, 0.4);;
+box-shadow: 0 0 0 2px rgba(0.7, 234, 218, 0.4);
 } 
 
 
 
 .dropdown__list-priority{
-    /* display: none; */
+    display: none;
 
     position: absolute;
   
@@ -161,9 +129,9 @@ box-shadow: 0 0 0 2px rgba(0.7, 234, 218, 0.4);;
    
 }
 
- .dropdown__list-priority--visible{
+ /* .dropdown__list-priority--visible{
     display: block;
-}
+} */
 
 
 
@@ -191,7 +159,7 @@ box-shadow: 0 0 0 2px rgba(0.7, 234, 218, 0.4);;
 
 
 .dropdown__list-status {
-    /* display: none; */
+    display: none;
 
     position: absolute;
 
@@ -210,7 +178,13 @@ box-shadow: 0 0 0 2px rgba(0.7, 234, 218, 0.4);;
     
 }
 
-.dropdown__list-status--visible {
+
+
+/* .dropdown__list-status--visible {
+    display: block;
+} */
+
+.list-visible {
     display: block;
 }
 
@@ -252,3 +226,14 @@ box-shadow: 0 0 0 2px rgba(0.7, 234, 218, 0.4);;
 
 
 
+.input:active {
+    outline: none;
+    box-shadow: 0 0 0 2px rgba(0.7, 234, 218, 0.4);
+}
+
+.search-result {
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
