--- a/src/css/cardsStyle.css
+++ b/src/css/cardsStyle.css
@@ -1,7 +1,3 @@
-.container {
-    width: 1300px;
-}
-
 .hidden {
     display: none;
 }
@@ -11,12 +7,14 @@
 }
 
 .card-container {
+    width: 1000px;
+    margin: 0 auto;
     position: relative;
     height: auto;
     background: #323232;
     border-radius: 30px;
     padding: 50px 50px 20px 50px;
-    margin-bottom: 100px;
+    margin-top: 160px;
 }
 
 .card-container-p {
@@ -37,18 +35,18 @@
 
 
 .card-container-p p:nth-of-type(1) {
-    top: -110px;
+    top: -100px;
 }
 
 .card-container-p p:nth-of-type(2) {
-    top: -110px;
+    top: -100px;
     left: 350px;
 }
 
 .card-container-p p:nth-of-type(n+3) {
     border: 1px solid #0D7377;
     border-radius: 100px;
-    width: 1200px;
+    width: 900px;
     height: 50px;
     margin-bottom: 10px;
     align-items: center;
@@ -85,7 +83,7 @@
 .card-container-btn-cancel {
     position: absolute;
     right: 5px;
-    top: -100px;
+    top: -90px;
     width: 33.94px;
     height: 33.94px;
     background: #323232;
