--- a/src/css/create.css
+++ b/src/css/create.css
@@ -1,34 +1,110 @@
+.create-form-background select {
+    position: relative;
+    background-color: #0D7377;
+    border-radius: 10px;
+    text-align: center;
+    height: 45px;
+    width: 145px;
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #B6EADA;
+    margin-top: 30px;
+}
+
+.create-form-background select p {
+    position: absolute;
+    top: -20px;
+}
+
+.create-form-select-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+/*.create-form-background {
+    display: none;
+    background-color: rgba(0, 110, 88, 0.1);
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+}*/
+
 .create-box {
+    position: relative;
     display: none;
     width: 500px;
-}
-h2 {
-    font-size: 1.5rem;
-}
-
-.form-box {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    height: 720px;
+    margin: 0 auto;
+    background-color: #323232;
+    border-radius: 30px
 }
 
-.user-box:nth-child(1),
-.user-box:nth-child(2),
-.user-box:nth-child(3) {
-    grid-column: span 2;
-    grid-row: span 1;
+.create-box h2 {
+    color: #0D7377;
+    text-align: center;
+    font-size: 35px;
+    padding-top: 20px;
 }
 
-.user-box:nth-child(4),
-.user-box:nth-child(5),
-.user-box:nth-child(6),
-.user-box:nth-child(7),
-.user-box:nth-child(8),
-.user-box:nth-child(9),
-.user-box:nth-child(10),
-.user-box:nth-child(11),
-.user-box:nth-child(12),
-.user-box:nth-child(13) {
-    grid-column: span 3;
-    grid-row: span 1;
+.create-form-input-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.create-form-input-container input {
+    font-size: 20px;
+    color: #B6EADA;
+    border: 3px solid #0D7377;
+    border-radius: 20px;
+    padding: 10px;
+    width: 70%;
+    height: 45px;
+    margin-top: 20px;
+}
+
+.create-form-input-container input:focus {
+    box-shadow: 0px 0px 5px #03e9f4;
+}
+
+.create-form-input-container input::placeholder {
+    color: #B6EADA;
+}
+
+.create-form-btn-container {
+    display: flex;
+    width: 340px;
+    margin: 0 auto;
+    gap: 20px;
+    margin-top: 20px;
+    position: absolute;
+    bottom: 20px;
+    left: 80px;
+}
+
+.btn-add-form-create,
+.btn-clear-form-create {
+    width: 160px;
+    height: 55px;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #B6EADA;
+    background-color: #0D7377;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+}
+
+.btn-add-form-create:hover,
+.btn-clear-form-create:hover {
+    background-color: #03e9f4;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+
 }
