--- a/src/css/header.css
+++ b/src/css/header.css
@@ -25,7 +25,7 @@ header {
 }
 
 .header-btn-box {
-
+    gap: 20px;
     display: flex;
     align-items: center;
 }
@@ -49,7 +49,6 @@ header {
     cursor: pointer;
     box-shadow: 0 0 0 0 rgba(90, 153, 212, 0.5);
     -webkit-animation: pulse 3s infinite;
-    margin-right: 60px;
 }
 
 .pulse-button:hover {
@@ -85,17 +84,17 @@ header {
 
 
 /*---Login/LogOut btns---*/
-.login {
+.login,
+.registration {
     border: 2px solid #0D7377;
     background: linear-gradient(270.09deg, #0D7377 0.06%, #446158 101.02%);
-    width: 100px;
+    width: 140px;
     cursor: pointer;
     border-radius: 50px;
     padding: 13px 0px 13px 0px;
     color: #B6EADA;
     font-size: 18px;
-    text-align: left;
-    text-indent: 25px;
+    text-align: center;
     display: block;
     text-shadow: #0D7377 1px 0 10px;
 
@@ -108,6 +107,7 @@ header {
     -moz-transition-property: all;
 }
 
-.login:hover {
+.login:hover,
+.registration:hover {
     text-indent: 20px;
 }
