--- a/src/css/create.css
+++ b/src/css/create.css
@@ -8,7 +8,7 @@
     margin-bottom: 15px;
     font-size: 20px;
     color: #B6EADA;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .create-form-background select p {
@@ -41,6 +41,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-direction: column;
+    align-content: center;
 }
 
 .create-form-input-container input {
@@ -51,7 +53,11 @@
     padding: 10px;
     width: 70%;
     height: 45px;
-    margin-top: 20px;
+}
+
+.create-form-input-container label {
+    color: #0D7377;
+    margin: 10px;
 }
 
 .create-form-input-container input:focus {
