--- a/src/css/login.css
+++ b/src/css/login.css
@@ -22,7 +22,7 @@
     position: relative;
 }
 
-.login-box .user-box input {
+.login-box .user-box input  {
     width: 100%;
     padding: 10px 0;
     font-size: 16px;
@@ -32,6 +32,11 @@
     border-bottom: 1px solid #0D7377;
     outline: none;
     background: transparent;
+}
+
+.form {
+    font-size: 16px;
+    color: #B6EADA;
 }
 
 .login-box .user-box label {
