add validation in form edit and create

--- a/src/css/create.css
+++ b/src/css/create.css
@@ -65,7 +65,7 @@
 }
 
 .create-form-input-container input::placeholder {
-    color: #B6EADA;
+    color: #323232;
 }
 
 .create-form-btn-container {
