--- a/src/css/cardsStyle.css
+++ b/src/css/cardsStyle.css
@@ -7,13 +7,13 @@
 }
 
 .card-container {
-    width: 1000px;
+    min-width: 300px;
     margin: 0 auto;
     position: relative;
     height: auto;
     background: #323232;
     border-radius: 30px;
-    padding: 50px 50px 20px 50px;
+    padding: 30px 30px 20px 30px;
     margin-top: 230px;
 }
 
@@ -22,7 +22,6 @@
 }
 
 .card-container-p p:nth-of-type(-n+2) {
-
     position: absolute;
     background: #323232;
     border-radius: 100px;
@@ -31,8 +30,6 @@
     font-size: 18px;
     padding: 12px 22px;
 }
-
-
 
 .card-container-p p:nth-of-type(1) {
     top: -100px;
@@ -47,8 +44,8 @@
 .card {
     border: 1px solid #0D7377;
     border-radius: 100px;
-    width: 900px;
-    height: 50px;
+    min-width: 200px;
+    min-height: 50px;
     margin-bottom: 10px;
     align-items: center;
     font-weight: 400;
@@ -88,11 +85,26 @@
 }
 
 .card-container-btn-cancel {
-    position: absolute;
-    right: 5px;
+    position: relative;
+    left: 90%;
     top: -90px;
     width: 33.94px;
     height: 33.94px;
     background: #323232;
     border-radius: 100px;
+}
+
+@media (max-width: 425px) {
+    .header-container>a {
+        display: none;
+    }
+    .header-container {
+        justify-content: center;
+    }
+}
+
+@media (max-width: 600px) {
+    .card-container-p p:nth-of-type(2) {
+        display: none;
+    }
 }
