--- a/src/css/create.css
+++ b/src/css/create.css
@@ -4,9 +4,10 @@
     border-radius: 10px;
     text-align: center;
     height: 45px;
-    width: 145px;
+    min-width: 90px;
+    width: 30%;
     margin-bottom: 15px;
-    font-size: 20px;
+    font-size: 18px;
     color: #B6EADA;
     margin-top: 10px;
 }
@@ -23,7 +24,7 @@
 
 .create-box {
     position: relative;
-    width: 500px;
+    max-width: 500px;
     height: 800px;
     margin: 0 auto;
     background-color: #323232;
@@ -34,7 +35,7 @@
     color: #0D7377;
     text-align: center;
     font-size: 35px;
-    padding-top: 20px;
+    padding-top: 30px;
 }
 
 .create-form-input-container {
@@ -70,18 +71,17 @@
 
 .create-form-btn-container {
     display: flex;
-    width: 340px;
+    width: 100%;
     margin: 0 auto;
-    gap: 20px;
-    margin-top: 20px;
+    gap: 10px;
     position: absolute;
-    bottom: 20px;
-    left: 80px;
+    bottom: 10px;
+    justify-content: center;
 }
 
 .btn-add-form-create,
 .btn-clear-form-create {
-    width: 160px;
+    min-width: 120px;
     height: 55px;
     font-size: 16px;
     text-transform: uppercase;
